Lots of added code from live coding for students

--- a/Sample Exam Questions/LoopProblem.tex
+++ b/Sample Exam Questions/LoopProblem.tex
@@ -36,7 +36,7 @@ public class LoopProblem {
 		double a, b;
 		a = 2.5; b = 29.0;
 		while (b < 50) {
-			if (stuff(a, b) > -30 {
+			if (stuff(a, b) > -30) {
 				a = stuff(a, b);
 			}
 		}
